# roguelike

./: .gitignore  CMakeLists.txt  gioco  main.c
Headers/: disegna_mappa.h  entità.h  gioco.h  mappa.h  pathfinding.h
Source/: disegna_mappa.c  entità.c  gioco.c  mappa.c  pathfinding.c
